--- a/app/templates/drug_classes.html
+++ b/app/templates/drug_classes.html
@@ -4,22 +4,16 @@
 	<div class="row">
 		<div class="col">
 			<div class="card card-chart">
-				<div class="card-header card-header-danger">
-					<div class="ct-chart">
-
-					</div>
+				<div class="card-header">
+    				<h1>Drug targets by companies</h1>
 				</div>
 				<div class="card-body">
 
                     <div class="row">
-                        <h1 class="display-1">Drug targets by companies</h1>
-                    </div>
-                    <div class="row">
                         <div class="col-md-2">
                             <div class="stacked-companies">
-                                <div>Total Companies</div>
-                                <div>996</div>
-                                <form id="companies_form">
+                                <div class="h4">Select company size:</div>
+                                <form id="companies_form" class="mt-3 mb-3">
                                 </form>
                             </div>
                         </div>
@@ -29,8 +23,7 @@
                         </div>
                         <div class="col-md-2">
                             <div class="stacked-diseases">
-                                <div>Total Disease Classes</div>
-                                <div>34</div>
+                                <div class="h4">Select disease class:</div>
                                 <form id="disease_classes_form">
                                 </form>
                             </div>
